--- a/templates/jukebox.html
+++ b/templates/jukebox.html
@@ -58,6 +58,16 @@
 				<div class='album-name'>
 					
 				</div>
+
+				<div class='control'>
+					<div id='like'>
+						<i class='fa fa-heart'>
+						</i>
+						<div id='like-count'>
+							0
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
