--- a/templates/jukebox.html
+++ b/templates/jukebox.html
@@ -61,7 +61,7 @@
 
 				<div class='control'>
 					<div id='like'>
-						<i class='fa fa-heart'>
+						<i class='fa fa-thumbs-up'>
 						</i>
 						<div id='like-count'>
 							0
