--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/font-awesome.css')}}">
 	<link rel="stylesheet" type="text/css" href="../static/css/general.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/home.css">
+	<link rel="stylesheet" type="text/css" href="../static/css/font-awesome.css">
 	<title>Home Page</title>
 	<script type="text/javascript" src="../static/js/jquery-3.6.0.js"></script>
 </head>
