增加音乐播放器背景，增加评论显示
增加音乐播放器背景，增加评论显示

--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -23,7 +23,9 @@ body {
     font-size: 12px;
     line-height:30px;
     color:#777;
-    background:#111;
+    background:url('../img/background/contact.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .container {
@@ -42,7 +44,7 @@ body {
 }
 
 #contact h3 {
-    color: #F96;
+    color: #000000;
     display: block;
     font-size: 30px;
     font-weight: 400;
@@ -83,7 +85,7 @@ fieldset {
     cursor:pointer;
     width:100%;
     border:none;
-    background:#0CF;
+    background:#000000;
     color:#FFF;
     margin:0 0 5px;
     padding:10px;
@@ -91,7 +93,7 @@ fieldset {
 }
 
 #contact button[type="submit"]:hover {
-    background:#09C;
+    background:#254048;
     -webkit-transition:background 0.3s ease-in-out;
     -moz-transition:background 0.3s ease-in-out;
     transition:background-color 0.3s ease-in-out;
