--- a/templates/jukebox.html
+++ b/templates/jukebox.html
@@ -24,6 +24,14 @@
 		</div>
 	</div>
 
+	<div id='left-toggle-bg'>
+		<i class='fa fa-caret-left'></i>
+	</div>
+
+	<div id='right-toggle-bg'>
+		<i class='fa fa-caret-right'></i>
+	</div>
+
 	<div class='player-cover'>			
 		<div class="player">
 			<div class="player-content">
@@ -73,5 +81,6 @@
 	</div>
 
 	<script type="text/javascript" src="../static/js/player.js"></script>
+	<script type="text/javascript" src="../static/js/toggleBG.js"></script>
 </body>
 </html>
