--- a/static/css/general.css
+++ b/static/css/general.css
@@ -35,6 +35,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     min-width: 1200px;
     height: 50px;
+    top: 0px;
     box-shadow:0px 0px  10px 5px #aaa;
     z-index: 10;
     line-height: 50px;
@@ -48,7 +49,6 @@ h1, h2, h3, h4, h5, h6 {
 {
     height: 30px;
     line-height: 30px;
-    opacity: 0.9;
     transform: scaleY(0.95);
 }
 
@@ -134,7 +134,7 @@ h1, h2, h3, h4, h5, h6 {
     text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
 }
 
-.front-image{
+/* .front-image{
     animation: fadeIn ease 1.5s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
@@ -148,7 +148,7 @@ h1, h2, h3, h4, h5, h6 {
     100%{
         opacity: 1;
     }
-}
+} */
 
 
 
