--- a/static/css/jukebox.css
+++ b/static/css/jukebox.css
@@ -5,6 +5,38 @@
 body{
     /*background-color: #f2c4c5;*/
     background-color: black;
+    background-image: url(../img/background/jukebox_1.jpg);
+    background-size: cover;
+    transition: 0.3s ease;
+}
+
+#left-toggle-bg{
+    position: fixed;
+    z-index: 200;
+    transform: scale(5, 5);
+    transition: 0.3s ease;
+    left: 30px;
+    top: 50%;
+    color: #fff;
+    opacity: 90%;
+}
+
+#right-toggle-bg{
+    position: fixed;
+    z-index: 200;
+    transform: scale(5, 5);
+    transition: 0.3s ease;
+    right: 30px;
+    top: 50%;
+    color: #fff;
+    opacity: 90%;
+}
+
+#right-toggle-bg:hover,#left-toggle-bg:hover{
+    cursor: pointer;
+    transform: scale(5.3, 5.3);
+    color: #EEE;
+    opacity: 100%;
 }
 
 *:focus
