--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/general.css')}}">
 	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/contact.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/font-awesome.css')}}">
 	<link rel="stylesheet" type="text/css" href="../static/css/general.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/contact.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/font-awesome.css">
@@ -27,7 +28,7 @@
 
  	
 <div class="container">  
-  <form id="contact" action="/send-contact" method="post">
+  <form id="contact" action="/thanks" method="post">
   	<fieldset>
     	<h3>Quick Contact</h3>
   	</fieldset>
@@ -41,13 +42,13 @@
       <input placeholder="Your Phone Number" type="tel" tabindex="3" required id="phone" name="phone"/>
     </fieldset>
     <fieldset>
-      <input placeholder="Your Web Site starts with http://" type="url" tabindex="4" required id="website" name="website"/>
+      <input placeholder="Your Web Site starts with http://" type="text" tabindex="4" required id="website" name="website"/>
     </fieldset>
     <fieldset>
       <textarea placeholder="Type your Message Here...." tabindex="5" required id="comment" name="comment"></textarea>
     </fieldset>
     <fieldset>
-      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+      <button name="submit" type="submit" id="contact-submit" data-submit="...Sending" οnclick="return false;">Submit</button>
     </fieldset>
   </form>
  
