--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -28,10 +28,6 @@
 	</div>
 
 	<div class='image-box'>
-		<img loading="lazy" width="2048" height="1638" src="../static/img/gallery/image_1.jpg" sizes="(min-width: 0px) and (max-width: 480px) 480px, (min-width: 481px) and (max-width: 980px) 980px, (min-width: 981px) and (max-width: 1280px) 1280px, (min-width: 1281px) 2048px, 100vw" class="image">
-		<img loading="lazy" width="2048" height="1638" src="../static/img/gallery/image_2.jpg" sizes="(min-width: 0px) and (max-width: 480px) 480px, (min-width: 481px) and (max-width: 980px) 980px, (min-width: 981px) and (max-width: 1280px) 1280px, (min-width: 1281px) 2048px, 100vw" class="image">
-		<img loading="lazy" width="2048" height="1638" src="../static/img/gallery/image_3.jpg" sizes="(min-width: 0px) and (max-width: 480px) 480px, (min-width: 481px) and (max-width: 980px) 980px, (min-width: 981px) and (max-width: 1280px) 1280px, (min-width: 1281px) 2048px, 100vw" class="image">
-		<img loading="lazy" width="2048" height="1638" src="../static/img/gallery/image_4.jpg" sizes="(min-width: 0px) and (max-width: 480px) 480px, (min-width: 481px) and (max-width: 980px) 980px, (min-width: 981px) and (max-width: 1280px) 1280px, (min-width: 1281px) 2048px, 100vw" class="image">
 	</div>	
 
 <div id="outerdiv" style="position:fixed;top:0;left:0;background:rgba(0,0,0,0.7);z-index:2;width:100%;height:100%;display:none;">
@@ -40,6 +36,8 @@
     </div>
 </div>    
 
-<script type="text/javascript" src="../static/js/expandPhoto.js"></script>
+<script type="text/javascript" src="../static/js/loadPhoto.js"></script>
+<script type="text/javascript" src='../static/js/autoscroll.js'></script>
+<script type="text/javascript" src="../static/js/header.js"></script>
 </body>
 </html>
