--- a/templates/contact_thanks.html
+++ b/templates/contact_thanks.html
@@ -39,7 +39,7 @@
 <section class="box content">
   <div class="wrapper ">
     <p>Music is also used for what you say, not just for entertainment, but also for accompanying us while we perform other missions. 
-    	<p>My passion is writing, and my habit of listening to blues while doing it produces amazing results because of the simple fact that it motivates and ignites the imagination.</p> 
+    	<p>My passion is coding, and my habit of listening to blues while doing it produces amazing results because of the simple fact that it motivates and ignites the imagination.</p> 
     <img src="../static/img/hiway-signs.png">
   </div>
 </section>
