--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
   <section class="background">
     <div class="content-wrapper">
       <p class="content-title">Going Way Down To Mississippi</p>
-      <p class="content-subtitle">Visit <strong><a href="./bio.html"><font color=white>Bio</font></a></strong> And Find Out the origin of the Blues</p>
+      <p class="content-subtitle">Find Out the <strong><a href="./bio.html"><font color=white>origin</font></a></strong> of the Blues</p>
       <div class='audio-control'>
 		<i class='fa fa-play'></i>
 	  </div>
@@ -45,8 +45,17 @@
   </section>
   <section class="background">
     <div class="content-wrapper">
-      <p class="content-title">TEST</p>
-      <p class="content-subtitle"><a><strong>hover</strong></a>TEST SUB</p>
+      <p class="content-title">Best of blues compilation</p>
+      <p class="content-subtitle">About the <a href="./jukebox.html"><strong><font color=white>Music</font></strong></a>, About the sound, About the real thing.</p>
+      <div class='audio-control'>
+		<i class='fa fa-play'></i>
+	  </div>
+    </div>
+  </section>
+  <section class="background">
+    <div class="content-wrapper">
+      <p class="content-title">Watch Blues Greats perform live</p>
+      <p class="content-subtitle">About the <a href="./jukebox.html"><strong><font color=white>Music</font></strong></a>, About the sound, About the real thing.</p>
       <div class='audio-control'>
 		<i class='fa fa-play'></i>
 	  </div>
