--- a/templates/jukebox.html
+++ b/templates/jukebox.html
@@ -60,25 +60,45 @@
 
 			<div class='player-info'>
 				<div class='track-name'>
-					
 				</div>
 
 				<div class='album-name'>
-					
 				</div>
 
-				<div class='control'>
-					<div id='like'>
-						<i class='fa fa-thumbs-up'>
-						</i>
-						<div id='like-count'>
-							0
+				<div id='like'>
+					<i class='fa fa-thumbs-up'>
+					</i>
+					<div style="font-family: Courgette; width: 200px; font-size: 8px; position: relative; left: 0;">
+						This Track Has Been Liked For: <b id='like-count'>0</b>  Times!
+					</div>
+				</div>
+
+				<div class='progress-bar'>
+					<div class='current-time'>
+					</div>
+					<div class='duration-time'>
+					</div>
+					<div class='bar-outer'>
+						<div class='bar-inner'>
+							
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+
+	<HR style="FILTER: alpha(opacity=100,finishopacity=0,style=3)" width="90%" color=#ffffff SIZE=4>
+
+<div class='play-list'>
+	<div class='selection-poster  poster_1'><a href='../static/audio/the_sky_is_crying_gary_bb_coleman.mp3'></a><p class='description'><i class="track"> "The Sky Is Crying"</i> - <i class='album'>Gary B.B. Coleman - Too Much Weekend</i></p></div>
+
+
+	<div class='selection-poster  poster_2'><a href='../static/audio/the_sky_is_crying_gary_bb_coleman.mp3'></a><p class='description'><i class="track"> "The Sky Is Crying2"</i> - <i class='album'>Gary B.B. Coleman2 - Too Much Weekend</i></p></div>
+
+	<div class='selection-poster  poster_3'><a href='../static/audio/riviera_paradise_srv.mp3'></a><p class='description'><i class="track"> "Riviera Paradise"</i> - <i class='album'>Stevie Ray Vaughan - In Step</i></p></div>
+
+</div>
 
 	<script type="text/javascript" src="../static/js/player.js"></script>
 	<script type="text/javascript" src="../static/js/toggleBG.js"></script>
