--- a/templates/video.html
+++ b/templates/video.html
@@ -26,19 +26,27 @@
   <div class="videoWrapper videoWrapper169">
     <video autobuffer autoloop loop controls>
     	<source src="">
-    	<param name="src" value="/media/video.oga">
     	<param name="autoplay" value="false">
     	<param name="autoStart" value="0">
     	</object>
     </video>
 
-    <!-- the poster frame - in the form of a button to make it keyboard accessible -->
-    <button class="videoPoster" style="background-image:url(../static/img/poster/video_poster.jpg);">Play video</button>
+    <button class="videoPoster" style="background-image:url(../static/img/poster/video_poster.jpg);"></button>
   </div>
 </main>
 
+<HR style="FILTER: alpha(opacity=100,finishopacity=0,style=3)" width="90%" color=#ffffff SIZE=4>
+
 <div class='play-list'>
-	<div class='selection-poster'></div>
+	<div class='selection-poster  poster_1'><a href='../static/video/Eric Gales & Larkin Poe - Baby Please Dont Leave Me - 2019 Mediterranean KTBA Cruise-H0UA5WmFcf0.mp4'></a><p class='description'>"Baby Please Don't Leave Me" 2019 Mediterranean By Eric Gales And Larkin Poe</p></div>
+
+	<div class='selection-poster  poster_2'><a href='../static/video/Robert Cray in studio.mp4'></a><p class='description'>Robert Cray playing "Won't Be Coming Home" and "Fix This" in studio</p></div>
+
+	<div class='selection-poster  poster_3'><a href='../static/video/B.B. King - The Thrill Is Gone [Crossroads 2010] (Official Live Video)-SgXSomPE_FY.mp4'></a><p class='description'>B.B. King - The Thrill Is Gone [Crossroads 2010](Live Video) feat.Eric Clapton, Robert Cray, Jimmy Vaughan </p></div>
+
+	<div class='selection-poster  poster_4'><a href='../static/video/Christone “Kingfish” Ingram _ Covers “I Put A Spell On You”-9WKmnDTTIpY.mp4'></a><p class='description'>Christone “Kingfish” Ingram | Covers “I Put A Spell On You” Vintera Series Fender</p></div>
+
+	<div class='selection-poster  poster_5'><a href='../static/video/Time Makes Two - Robert Cray-2kiBPWNYkXk.mp4'></a><p class='description'>Robert Cray performing "Time Makes Two" [Crossroads 2004] live</p></div>
 </div>
 
 <script type="text/javascript" src='../static/js/video.js'></script>
