--- a/static/css/home.css
+++ b/static/css/home.css
@@ -86,15 +86,21 @@ html, body {
   .background:nth-child(3) {
     background-image: url(../img/background/home_3.jpg);
     background-size: cover; }
+  .background:nth-child(4) {
+    background-image: url(../img/background/home_3.jpg);
+    background-size: cover; }
 
 /* Set stacking context of slides */
 .background:nth-child(1) {
-  z-index: 3; }
+  z-index: 4; }
 
 .background:nth-child(2) {
-  z-index: 2; }
+  z-index: 3; }
 
 .background:nth-child(3) {
+  z-index: 2; }
+
+.background:nth-child(4) {
   z-index: 1; }
 
 .content-wrapper {
