--- a/static/css/jukebox.css
+++ b/static/css/jukebox.css
@@ -165,7 +165,6 @@ body{
 #inner-img{
     width: 100%;
     height: 100%;
-
 }
 
 .inner-1{
@@ -199,20 +198,145 @@ body{
 
 .track-name{
     margin: 0 auto;
-    color: #54576f;
+    color: #030303;
     font-size: 17px;
     font-weight: bold;
     height: 17px;
 }
 
 .album-name{
-    color: #acaebd;
-    font-size: 13px;
+    color: #101010;
+    font-style: oblique;
+    font-size: 10px;
     margin: 0 auto;
     height: 13px;
+}
+
+#like{
+    position: absolute;
+    left: 13px;
+    bottom: 10px;
+}
+
+#like i{
+    position: relative;
+    left: 25%;
+    font-size: 50px;
 }
 
 #like i:hover{
     color: red;
     cursor: pointer;
+}
+
+#like #like-count{
+    font-size: 15px;
+    font-style: italic;
+    text-shadow: 1px 1px 1px 1px #010101;
+}
+
+.progress-bar{
+    position: relative;
+    width: 200px;
+    font-size: 11px;
+    font-family: "Courgette";
+    margin-top: 8px;
+
+}
+
+.progress-bar .current-time{
+    position:absolute;
+    left: 0;
+}
+
+.progress-bar .duration-time{
+    position:absolute;
+    right: 0;
+}
+
+.progress-bar .bar-outer{
+    position: absolute;
+    top: 21px;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 100%;
+    height: 5px;
+    background-color: grey;
+}
+
+.progress-bar .bar-outer:hover{
+    cursor: pointer;
+}
+
+.progress-bar .bar-inner{
+    position: absolute;
+    top: 0px;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 0%;
+    height: 5px;
+    background-color: black;
+}
+
+HR{
+    position: relative;
+    margin: 40px;
+    top: 500px;
+    opacity: 0;
+}
+
+.play-list{
+  position: relative;
+  margin: 40px;
+  top: 500px;
+  display: flex;
+}
+
+.selection-poster{
+    min-width: 200px;
+  margin: 50px;
+  width: 200px;
+  height: 200px;
+  transition: 0.3s ease;
+  border: 2px #ffffff solid;
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.selection-poster .description{
+  z-index: 5;
+  font-color: white;
+  font-family: "Courgette";
+  font-style: italic;
+  font-size: 10px;
+  line-height: 20px;
+  position: relative;
+  top: 45%;
+  left: 1px;
+  margin: 0 auto;
+  background-color: white;
+}
+
+.poster_1{
+  background-image: url(../img/album/71Gt46aX9Z4-MQ.jpg);
+}
+
+.poster_2{
+  background-image: url(../img/album/71Gt46aX9Z4-MQ.jpg);
+}
+
+.poster_3{
+  background-image: url(../img/album/x70G-NhyUPI-MQ.jpg);
+}
+
+.selection-poster:hover{
+  border: 2px red solid;
+  cursor: pointer;
+  animation: rotation 50s linear infinite;
+}
+
+.selection-poster.selected{
+  border: 2px red solid;
 }
