--- a/templates/contact_thanks.html
+++ b/templates/contact_thanks.html
@@ -38,60 +38,66 @@
 
 <section class="box content">
   <div class="wrapper ">
-    <p>Music is also used for what you say, not just for entertainment, but also for accompanying us while we perform other missions. 
+    	<p>Music is also used for what you say, not just for entertainment, but also for accompanying us while we perform other missions. 
     	<p>My passion is coding, and my habit of listening to blues while doing it produces amazing results because of the simple fact that it motivates and ignites the imagination.</p> 
+    	<p>I do not own the copyrigt to the images and music on this website, and it is not profitable. It serves the purpose of entertainment and enjoyment for beautiful music. If it is necessary to remove it will be removed. THANK YOU !!!</p>
     <img src="../static/img/hiway-signs.png">
   </div>
 </section>
 
 
 <section class="box comments">
-  <h3>Comments (<strong id='comment-count'>42</strong>)</h3>
+  <h3>Comments (<strong id='comment-count'>0</strong>)</h3>
+
+  <div class='refresh-button'>
+  		<i class='fa fa-refresh'></i>
+  </div>
+  
   <div class="comment-view">
   	<h4 class='comment-name'>
-  		jonathandunn
+ 
   	</h4>
   	<span class='comment-time'>
-  		3 hours ago
+
   	</span>
   	<p class="comment-text">
-  		Good point! There are travel bloggers. Then there are freelancers: coders mainly.
+
   	</p>
   </div>
 
   <div class="comment-view">
   	<h4 class='comment-name'>
-  		roberto98
+
   	</h4>
 		<span class='comment-time'>
-			4 hours ago
+
 		</span>
   	<p class='comment-text'>
-  		Not one family on amongst that. Being nomadic is easier when you only have 1 person to worry about
+ 
   	</p>
   </div>
 
   <div class="comment-view">
   	<h4 class='comment-name'>
-  		danielrubinho
+
   	</h4>
   <span class='comment-time'>
-		5 hours ago
+
 	</span>
   	<p class='comment-text'>
-  		Not saying it's not doable, some good friends of mine manage it but would have been a better article with a 50/50
+
   	</p>
   </div>
 
   <div class="comment-view">
   	<h4 class='comment-name'>
-  		patricscott 
+
   	</h4>
   	<span class='comment-time'>
-  		4 hours ago
+
   	</span>
   	<p class='comment-text'>
-  		here people do business from the road (running an IT company, traveling and filming their trave
+
   	</p>
   </div>
   
