--- a/templates/home.html
+++ b/templates/home.html
@@ -36,8 +36,8 @@
   </section>
   <section class="background">
     <div class="content-wrapper">
-      <p class="content-title">Going Way Down To Mississippi</p>
-      <p class="content-subtitle">Find Out the <strong><a href="./bio.html"><font color=white>origin</font></a></strong> of the Blues</p>
+      <p class="content-title">Going Way Down To The South</p>
+      <p class="content-subtitle">And Find Out the <strong><a href="./bio.html"><font color=white>origin</font></a></strong> of the Blues</p>
       <div class='audio-control'>
 		<i class='fa fa-play'></i>
 	  </div>
@@ -55,12 +55,22 @@
   <section class="background">
     <div class="content-wrapper">
       <p class="content-title">Watch Blues Greats perform live</p>
-      <p class="content-subtitle">About the <a href="./jukebox.html"><strong><font color=white>Music</font></strong></a>, About the sound, About the real thing.</p>
+      <p class="content-subtitle">About the <a href="./video.html"><strong><font color=white>Music</font></strong></a>, About the sound, About the real thing.</p>
+      <div class='audio-control'>
+			<i class='fa fa-play'></i>
+	  </div>
+    </div>
+  </section>
+  <section class="background">
+    <div class="content-wrapper">
+      <p class="content-title">Share Your Thoughts With Other Blues Lovers</p>
+      <p class="content-subtitle">Write Your Comment In <a href="./contact.html"><strong><font color=white>Contact</font></strong></a> Section</p>
       <div class='audio-control'>
 		<i class='fa fa-play'></i>
 	  </div>
     </div>
   </section>
+
 </div>
 
 <script type="text/javascript" src="../static/js/header.js"></script>
