--- a/templates/jukebox.html
+++ b/templates/jukebox.html
@@ -94,9 +94,11 @@
 	<div class='selection-poster  poster_1'><a href='../static/audio/the_sky_is_crying_gary_bb_coleman.mp3'></a><p class='description'><i class="track"> "The Sky Is Crying"</i> - <i class='album'>Gary B.B. Coleman - Too Much Weekend</i></p></div>
 
 
-	<div class='selection-poster  poster_2'><a href='../static/audio/the_sky_is_crying_gary_bb_coleman.mp3'></a><p class='description'><i class="track"> "The Sky Is Crying2"</i> - <i class='album'>Gary B.B. Coleman2 - Too Much Weekend</i></p></div>
+	<div class='selection-poster  poster_2'><a href='../static/audio/caught_out_in_the_rain.mp3'></a><p class='description'><i class="track"> "Caught Out In The Rain"</i> - <i class='album'>Beth Hart - Bang Bang Boom Boom</i></p></div>
 
 	<div class='selection-poster  poster_3'><a href='../static/audio/riviera_paradise_srv.mp3'></a><p class='description'><i class="track"> "Riviera Paradise"</i> - <i class='album'>Stevie Ray Vaughan - In Step</i></p></div>
+
+	<div class='selection-poster  poster_4'><a href='../static/audio/id_rather_go_blind_by_etta_james.mp3'></a><p class='description'><i class="track"> "I'd Rather Go Blind"</i> - <i class='album'>Etta James - Tell Mama</i></p></div>
 
 </div>
 
