--- a/templates/video.html
+++ b/templates/video.html
@@ -47,6 +47,8 @@
 	<div class='selection-poster  poster_4'><a href='../static/video/Christone “Kingfish” Ingram _ Covers “I Put A Spell On You”-9WKmnDTTIpY.mp4'></a><p class='description'>Christone “Kingfish” Ingram | Covers “I Put A Spell On You” Vintera Series Fender</p></div>
 
 	<div class='selection-poster  poster_5'><a href='../static/video/Time Makes Two - Robert Cray-2kiBPWNYkXk.mp4'></a><p class='description'>Robert Cray performing "Time Makes Two" [Crossroads 2004] live</p></div>
+
+	<div class='selection-poster  poster_6'><a href='../static/video/JOHN MAYER Live [HD] Aint No Sunshine-ktyhXq00RxQ.mp4'></a><p class='description'>"Aint No Sunshine" Covered By John Mayer [Crossroads 2010] live HD</p></div>
 </div>
 
 <script type="text/javascript" src='../static/js/video.js'></script>
