--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/general.css">
 	<link rel="stylesheet" type="text/css" href="../static/css/gallery.css">
 	<script type="text/javascript" src="../static/js/jquery-3.6.0.js"></script>
-	<title>Home Page</title>
+	<title>Gallery</title>
 </head>
 <body>
 	<div class='main-header'>
