--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
   <section class="background">
     <div class="content-wrapper">
       <p class="content-title">Best of blues compilation</p>
-      <p class="content-subtitle">About the <a href="./jukebox.html"><strong><font color=white>Music</font></strong></a>, About the sound, About the real thing.</p>
+      <p class="content-subtitle">About the <a href="./jukebox.html"><strong><font color=white>Music</font></strong></a>, About the sound, About the real thing</p>
       <div class='audio-control'>
 		<i class='fa fa-play'></i>
 	  </div>
@@ -55,7 +55,7 @@
   <section class="background">
     <div class="content-wrapper">
       <p class="content-title">Watch Blues Greats perform live</p>
-      <p class="content-subtitle">About the <a href="./video.html"><strong><font color=white>Music</font></strong></a>, About the sound, About the real thing.</p>
+      <p class="content-subtitle"><a href="./video.html"><strong><font color=white>Top Class Bands & Musicians </font></strong></a> keeping the blues alive</p> 
       <div class='audio-control'>
 			<i class='fa fa-play'></i>
 	  </div>
@@ -64,7 +64,7 @@
   <section class="background">
     <div class="content-wrapper">
       <p class="content-title">Share Your Thoughts With Other Blues Lovers</p>
-      <p class="content-subtitle">Write Your Comment In <a href="./contact.html"><strong><font color=white>Contact</font></strong></a> Section</p>
+      <p class="content-subtitle"><a href="./video.html"><strong><font color=white>The Kind of Connection</font></strong></a> soothes the tortured soul of the night in a smokin' & vapin' city</p>
       <div class='audio-control'>
 		<i class='fa fa-play'></i>
 	  </div>
