--- a/templates/jukebox.html
+++ b/templates/jukebox.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/font-awesome.css">
 	<script type="text/javascript" src="../static/js/jquery-3.6.0.js"></script>
 
-	<title>Home Page</title>
+	<title>Jukebox</title>
 </head>
 <body scroll="auto">
 	<div class="main-header">
@@ -96,9 +96,21 @@
 
 	<div class='selection-poster  poster_2'><a href='../static/audio/caught_out_in_the_rain.mp3'></a><p class='description'><i class="track"> "Caught Out In The Rain"</i> - <i class='album'>Beth Hart - Bang Bang Boom Boom</i></p></div>
 
-	<div class='selection-poster  poster_3'><a href='../static/audio/riviera_paradise_srv.mp3'></a><p class='description'><i class="track"> "Riviera Paradise"</i> - <i class='album'>Stevie Ray Vaughan - In Step</i></p></div>
+	<div class='selection-poster  poster_3'><a href='../static/audio/lonely_bed.mp3'></a><p class='description'><i class="track"> "Lonely Bed"</i> - <i class='album'>Albert Cummings - The Long Way</i></p></div>
 
 	<div class='selection-poster  poster_4'><a href='../static/audio/id_rather_go_blind_by_etta_james.mp3'></a><p class='description'><i class="track"> "I'd Rather Go Blind"</i> - <i class='album'>Etta James - Tell Mama</i></p></div>
+
+	<div class='selection-poster  poster_5'><a href='../static/audio/different_shades_of_blue.mp3'></a><p class='description'><i class="track"> "Different Shades Of Blue"</i> - <i class='album'>Joe Bonamassa - Different Shades of Blue</i></p></div>
+
+	<div class='selection-poster  poster_6'><a href='../static/audio/this_is_a_mans_world.mp3'></a><p class='description'><i class="track"> "This Is A Man's World"</i> - <i class='album'>Joss Stone - Super Duper Love</i></p></div>
+
+	<div class='selection-poster  poster_7'><a href='../static/audio/autumn_blues.mp3'></a><p class='description'><i class="track"> "Autumn Blues"</i> - <i class='album'>Eddie Martin - Blue to the Bone</i></p></div>
+
+	<div class='selection-poster  poster_8'><a href='../static/audio/just_another_day.mp3'></a><p class='description'><i class="track"> "Just Another Day"</i> - <i class='album'>Sam Cooke - Just Another Day</i></p></div>
+
+	<div class='selection-poster  poster_9'><a href='../static/audio/if_i_had_money.mp3'></a><p class='description'><i class="track"> "If I Had Money"</i> - <i class='album'>Blues Delight - Open All Night</i></p></div>
+
+	<div class='selection-poster  poster_10'><a href='../static/audio/right_next_door.mp3'></a><p class='description'><i class="track"> "Right Next Door(Because Of Me)"</i> - <i class='album'>Robert Cray - Strong Persuader</i></p></div>
 
 </div>
 
