--- a/templates/contact_thanks.html
+++ b/templates/contact_thanks.html
@@ -40,7 +40,7 @@
   <div class="wrapper ">
     	<p>Music is also used for what you say, not just for entertainment, but also for accompanying us while we perform other missions. 
     	<p>My passion is coding, and my habit of listening to blues while doing it produces amazing results because of the simple fact that it motivates and ignites the imagination.</p> 
-    	<p>I do not own the copyrigt to the images and music on this website, and it is not profitable. It serves the purpose of entertainment and enjoyment for beautiful music. If it is necessary to remove it will be removed. THANK YOU !!!</p>
+    	<p>I do not own the copyrigt to the images and music on this website, and it is not profitable. It serves the purpose of entertainment and enjoyment for beautiful music. If it is necessary to remove it will be removed. Afterall, you don’t find great music, it finds you <br>THANK YOU !!!</p>
     <img src="../static/img/hiway-signs.png">
   </div>
 </section>
