--- a/templates/jukebox.html
+++ b/templates/jukebox.html
@@ -110,7 +110,7 @@
 
 	<div class='selection-poster  poster_9'><a href='../static/audio/if_i_had_money.mp3'></a><p class='description'><i class="track"> "If I Had Money"</i> - <i class='album'>Blues Delight - Open All Night</i></p></div>
 
-	<div class='selection-poster  poster_10'><a href='../static/audio/right_next_door.mp3'></a><p class='description'><i class="track"> "Right Next Door(Because Of Me)"</i> - <i class='album'>Robert Cray - Strong Persuader</i></p></div>
+	<div class='selection-poster  poster_10'><a href='../static/audio/right_next_door.mp3'></a><p class='description'><i class="track"> "Right Next Door"</i> - <i class='album'>Robert Cray - Strong Persuader</i></p></div>
 
 </div>
 
